# robot-voice-control

./: .travis.yml  README.md  dependencies.rosinstall
robot_voice_control/: CMakeLists.txt  package.xml
robot_voice_control/config/: allegro_hand_control.yaml  kuka_teaching_commands.yaml
robot_voice_control/language_models/: README.md  allegro_command.corpus  allegro_command.dict  allegro_command.lm  kuka_teaching_commands.corpus  kuka_teaching_commands.dict  kuka_teaching_commands.lm
robot_voice_control/launch/: allegro_control.launch  kuka_teaching_control.launch
robot_voice_control/nodes/: __init__.py  message_control.py
robot_voice_control/nodes/test/: load_test_params.py  test_message_control.py  test_message_type_conversion.py  test_meta_commands.py  test_params.yaml  test_parse_mapping.py
state_machine_template/: CMakeLists.txt  package.xml
state_machine_template/scripts/: demo_collection.py  interactive_demo.py  template.py
